Update Latest Code

--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,86 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Hexaware Soft Skill Gen AI</title>
   </head>
+  <style>
+    body {
+        background-image: url('Background.jpg'); /* Adjusted the path to assets folder */
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        color: rgba(0, 0, 0, 0.87);
+        font-family: Roboto, Helvetica, Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .message {
+        background: rgba(255, 255, 255, 0.85);
+        max-width: 360px;
+        padding: 32px 24px;
+        border-radius: 8px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
+
+      .message h2 {
+        color: #ffa100;
+        font-weight: bold;
+        font-size: 16px;
+        margin: 0 0 8px;
+      }
+
+      .message h1 {
+        font-size: 22px;
+        font-weight: 300;
+        color: rgba(0, 0, 0, 0.6);
+        margin: 0 0 16px;
+      }
+
+      .message p {
+        line-height: 1.4;
+        margin: 16px 0 24px;
+        font-size: 14px;
+      }
+
+      .button {
+        display: inline-block;
+        padding: 16px 24px;
+        background-color: #039be5;
+        color: white;
+        border-radius: 4px;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: bold;
+        transition: background-color 0.3s ease;
+      }
+
+      .button:hover {
+        background-color: #0277bd;
+      }
+
+      #load {
+        color: rgba(0, 0, 0, 0.4);
+        text-align: center;
+        font-size: 13px;
+        margin-top: 16px;
+      }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="message">
+
+      <h2>Welcome</h2>
+      <h1>Hexaware soft skills</h1>
+      <p>Be Ready for your Vyakaran Journey</p>
+      <a class="button" id="loginButton" href="%PUBLIC_URL%/Login">Go to Login Page</a>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
