Remove exposed Google API Key

--- a/public/index.html
+++ b/public/index.html
@@ -97,12 +97,11 @@
   </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="message">
-
-      <h2>Welcome</h2>
+    <div id="root">
+    <!--  <h2>Welcome</h2>
       <h1>Hexaware soft skills</h1>
       <p>Be Ready for your Vyakaran Journey</p>
-      <a class="button" id="loginButton" href="%PUBLIC_URL%/Login">Go to Login Page</a>
+      <a class="button" id="loginButton" href="%PUBLIC_URL%/Login">Go to Login Page</a> -->
     </div>
     <!--
       This HTML file is a template.
