--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
       <h1>Hexaware soft skills</h1>
       <p>Be Ready for your Vyakaran Journey</p>
       <a class="button" id="loginButton" href="%PUBLIC_URL%/Login">Go to Login Page</a>
+      <!--"homepage": "https://github.com/pkjpankaj82/hexaware-softskill-AI"; in package.json-->
     </div>
   </body>
 </html>
